...
                        }
                        //2. Add Task List
                        TaskListContent(viewModel: viewModel)
                    }
                }
            }
            .navigationTitle("Tasks")
            .background(Color(.clear))
            .toolbar {
                ToolbarItem(placement: .primaryAction) {
                    //Add ToolbarMenu here: Task Sorting and Filtering options
                    ToolbarMenu(viewModel: viewModel)
                }
...
                        showTaskCreation = true
                    }) {
                        Image(systemName: "plus")
                            .scaleEffect(isPulsing ? 1.2 : 1)
                            .animation(.easeInOut(duration: 0.2), value: isPulsing)
                    }
                    .accessibilityLabel("Add new task")
                    .accessibilityIdentifier("Add new task")
                    .accessibilityHint("Tap to create a new task")
                    .keyboardShortcut("n", modifiers: .command)
                }
                
                ToolbarItem(placement: .navigationBarTrailing) {
...
